--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.6.0",
+    "format-currency": "^1.0.0",
     "gradient-color": "^2.0.0",
     "react": "^15.6.1",
     "react-chartjs-2": "^2.5.6",
