--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "chart.js": "^2.6.0",
     "format-currency": "^1.0.0",
+    "fuzzy-search": "^1.4.0",
     "gradient-color": "^2.0.0",
     "react": "^15.6.1",
     "react-chartjs-2": "^2.5.6",
