--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^15.6.1",
     "react-chartjs-2": "^2.5.6",
     "react-dom": "^15.6.1",
+    "react-number-format": "^2.0.3",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.11",
     "semantic-ui-react": "^0.71.3"
